# Assignment

./: Dockerfile  Makefile  README.md  docker-compose.simple.yml  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt
local_blob_storage/documents/: Lead Gen AI Engineer - Assignment.docx  api_test.txt  sample_document.txt
src/blob_storage/: __init__.py  api.py  chunker.py  cli.py  config.py  document_processor.py  embeddings.py  guardrails.py  llm.py  rag.py  reranker.py  storage.py  vector_store.py
src/blob_storage.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_api.py  test_chunker.py  test_document_processor.py  test_embeddings.py  test_guardrails.py  test_llm.py  test_rag.py  test_reranker.py  test_storage.py  test_vector_store.py
